Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/WrongValue.out
WrongValue.java:25:5: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: TestM3, TestM2)
1 error
